# geim

./: .gitignore  CLAUDE.md
.claude/skills/: UNITY_SKILLS_HANDOFF.md
.claude/skills/_tools/: SKILL_BUILD_SPEC.md  UE_SKILL_BUILD_SPEC.md  classify_docs.py  classify_ue_docs.py  unity.sh  unity_html_to_md.py
.claude/skills/applying-game-aesthetics/: SKILL.md  aesthetic-evaluation-lenses.md  art-design-integration-guide.md  audio-aesthetics-guide.md  learning-to-see-guide.md
.claude/skills/choosing-game-technology/: SKILL.md  foundational-vs-decorational-guide.md  future-prediction-framework.md  technology-design-lenses.md  technology-trends-and-patterns.md
.claude/skills/creating-game-worlds-and-characters/: SKILL.md  avatar-design-principles.md  character-design-guide.md  character-relationships-guide.md  transmedia-world-properties.md  world-and-character-lenses.md
.claude/skills/designing-core-gameplay-experience/: SKILL.md  essential-experience-guide.md  interest-curves-guide.md  iteration-and-prototyping-guide.md  theme-design-guide.md
.claude/skills/designing-for-impact-and-ethics/: SKILL.md  designer-purpose-guide.md  ethics-and-responsibility-guide.md  (+1 more)
agents/: .env.sample  .gitignore  README.md  pyproject.toml
agents/game_agents/: __init__.py  __main__.py  agents.py  config.py  feature_list.py  phases.py  schemas.py  server.py
agents/tests/: test_feature_list.py  test_skills.py
docs/benchmarks/: main.md
docs/team_roles/: _ai_arts_roles.md  _main.md  design_roles.md
docs/workflow/: iteration_loop.md  orchestrator.md
(+41509 files in other folders)
