[project]
name = "game-agents"
version = "0.1.0"
description = "Claude Agent SDK project driving the 8-phase game-dev iteration loop, orchestrated by n8n."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
]

[project.scripts]
# `uv run game-agents-server` starts the FastAPI app.
game-agents-server = "game_agents.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["game_agents"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"
